--- a/tcc.bib
+++ b/tcc.bib
@@ -202,7 +202,7 @@
 
 @online{OwaspMainInTheMiddle,
 	author    = {Owasp},
-	title     = {Main in the Middle},
+	title     = {Man in the Middle},
 	publisher = {},
 	year      = {2015},
 	note      = {$<$Disponível em: \url{https://www.owasp.org/index.php/Man-in-the-middle_attack}$>$. Acesso em: 3 de Junho de 2018}
