--- a/conteudo/capitulo1.tex
+++ b/conteudo/capitulo1.tex
@@ -1,20 +1,18 @@
 \chapter{Introdução}\label{cpIntroducao}
 
-No presente trabalho será realizada a evolução do módulo de gerenciamento do portal de algoritmos da Universidade de Caxias do Sul. Nesse mesmo período foi desenvolvido pelo aluno Gabriel Weber um trabalho que visa a evolução do analisador algorítmico \cite{Weber2015}.
+No presente trabalho será realizada a evolução do módulo de gerenciamento do portal de algoritmos da Universidade de Caxias do Sul. No ano de 2016 foi concluido pelo aluno Gabriel Weber um trabalho que evoluiu o analisador algorítmico \cite{Weber2015}.
 
 O portal de algoritmos, desenvolvido no ano de 2009 pelos professores Ricardo Vargas Dorneles e Delcino Picinin Junior, da Universidade de Caxias do Sul, tem por objetivo auxiliar no ensino da lógica de programação através da linguagem do português estruturado, também conhecida como portugol e é utilizado pelos alunos do \ac{CCET} e público em geral. Esse portal oferece ao aluno a possibilidade de exercitar sua lógica através de exercícios cadastrados pelos professores, utilizando a linguagem portugol em um editor específico. O aluno submete soluções de problemas a fim de validá-las e pode acompanhar seu desempenho através de um ranking de submissões de soluções corretas. O portal possui uma seção de gerenciamento que somente administradores podem acessar. Nessa administração há a possibilidade de acompanhar a evolução dos alunos, suas submissões de soluções, visualização e edição de usuário, de problemas, de dados de testes e palavras-chave \cite{Dorneles2004}.
 
-No ano de 2016 o \textit{software} cliente do portal de algorítmos foi refeito, pois naquele ano foi preciso migrar o programa escrito em \textit{Java Applet} para um aplicativo \textit{Desktop}, trocando informações com o portal servido através de \textit{Web Services}. No entandto, o \textit{software} servidor não foi migrado, e é neste contexto que este trabalho está inserido.
+No ano de 2016 o \textit{software} cliente do portal de algorítmos foi refeito, pois naquele ano foi preciso migrar o programa escrito em \textit{Java Applet} para um aplicativo \textit{Desktop}, esse \textit{software Desktop} é instalado localmente e consumindo o \textit{Web Services} do portal de algorítmos antigo. No entanto, o \textit{software} servidor não foi migrado, e é neste contexto que este trabalho está inserido.
 
 Na criação de um problema, o administrador informa um nome e uma descrição do problema a ser solucionado, dicas e palavras-chave, sendo que as últimas  informações não são obrigatórias. Também são informadas entradas de dados para testes e as saídas esperadas para as entradas informadas. Já na edição do problema, as mesmas informações citadas acimas podem ser alteradas.
-
-Outra funcionalidade do portal é de poder acompanhar as submissões dos alunos. Selecionando um problema, pode-se visualizar os alunos que submeteram uma solução para o mesmo e a partir do aluno é possível ver as soluções dele e em seguida visualizar as soluções em si. Essa é uma das formas de acompanhar a evolução do aluno. Outra forma é partindo de um determinado aluno e visualizando todas as soluções que ele já submeteu.
 
 No módulo de administração é possível manter todas as informações dos usuários, problemas, palavras-chave, dados de testes, dentre outras informações.
 
 Devido à constante evolução tecnológica, o portal de algoritmos ficou defasado, com problemas de compatibilidade com os navegadores atuais e pouca ou nenhuma segurança. Funcionalidades limitadas no seu gerenciamento também foram apontadas pelos usuários como alvo de melhorias.
 
-As tecnologias utilizadas no desenvolvimento do portal atual, \textit{Python } versão 2.6, \textit{Django} versão 1.2, \textit{Plugins} \ac{NPAPI} (\textit{Java Applet}), estão desatualizadas ou foram descontinuadas. No caso da tecnologia \ac{NPAPI}, esta foi totalmente desativada \cite{Python2015, Django2015, NPAPI2015}.
+As tecnologias utilizadas no desenvolvimento do portal atual, \textit{Python } versão 2.6, \textit{Django} versão 1.2, \textit{Plugins} \ac{NPAPI} (\textit{Java Applet}), estão desatualizadas e/ou foram descontinuadas. No caso da tecnologia \ac{NPAPI}, esta foi totalmente desativada \cite{Python2015, Django2015, NPAPI2015}.
 
 Um dos problemas citados acima são as versões do \textit{Python} e \textit{Django}, que estão em versões desatualizadas e sem suporte técnico por seus desenvolvedores.
 
@@ -30,9 +28,7 @@ Com \textit{Python} e \textit{Django} foram desenvolvidas todos os modelos de cl
 
 Será realizada a diagramação das classes atuais utilizando-se da notação \ac{UML}. Serão utilizados diagramas de classes de domínio, que representarão essas classes, interfaces e suas associações, para que depois sejam usadas no desenvolvimento de um modelo de sistema orientado a objetos \cite{Pressman2011, Sommerville2011}.
 
-Através da engenharia de \textit{software} será produzido um novo portal de algoritmos, desde os estágios inicias da especificação do sistema até sua manutenção. Com o uso de engenharia de \textit{software} espera-se obter resultados de qualidade e requeridos dentro do cronograma \cite{Sommerville2011}.
-
-
+Através da engenharia de \textit{software} será produzido um novo portal de algoritmos, desde os estágios inicias da especificação do sistema até sua implementação e instalação. Com o uso de engenharia de \textit{software} espera-se obter resultados de qualidade e requeridos dentro do cronograma \cite{Sommerville2011}.
 
 Para atingir o objetivo proposto, o trabalho está organizado da seguinte forma:
 
@@ -41,5 +37,7 @@ No Capítulo \ref{cpReferencial} são apresentados todos os conceitos metodológico
 No Capítulo \ref{cpReengenhariaSoftware} é apresentada a reengenharia de \textit{software} realizada no portal de algoritmos atual.
 
 No Capítulo \ref{cpProposta} é apresentada a modelagem para a evolução do \textit{software}, suas interfaces e diagramas relacionados.
+
+No Capítulo \ref{seguranca} é apresentado uma proposta de segurança para o servidor, essa segurança deve ser configurado na infra-estrutura.
 
 No Capítulo \ref{cpConsideracoesParciais} são apresentadas as considerações parciais do trabalho.
