--- a/tcc.tex
+++ b/tcc.tex
@@ -184,6 +184,7 @@ A todos vocês, minha sincera gratidão.
 \acro{TCP}[{\textit{TCP}}]{\textit{Transmission Control Protocol}}
 \acro{CSS}[{\textit{CSS}}]{\textit{Cascading Style Sheets}}
 \acro{SSL}[{\textit{SSL}}]{\textit{Secure Socket Layer}}
+\acro{JDBC}[{\textit{JDBC}}]{\textit{Java Database Connectivity}}
 \end{acronym}
 
 \listoffigures
